# chzzkbackup

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
app/: chat_capture.py  chat_csv_migrate.py  chat_merge.py  chzzk_api.py  config.py  db.py  encoder.py  logger.py  main.py  maintenance.py  media_library.py  platforms.py  recorder.py  twitcasting_api.py  twitcasting_chat.py  utils.py
app/plugin/: chzzk.py
app/static/: player.js  styles.css
app/templates/: base.html  index.html  library.html  player.html
app/templates/partials/: logs.html  status.html
tests/: test_chat_capture.py  test_chat_csv_migrate.py  test_chat_merge.py  test_config.py  test_db.py  test_encoder.py  test_media_library.py  test_platforms.py  test_plugin.py  test_recorder.py  test_twitcasting_chat.py  test_utils.py
