[project]
name = "chzzkbackup"
version = "0.1.8"
description = "Local CHZZK live recorder and chat backup dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.0",
    "chzzk-python>=0.14.3",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "orjson>=3.10.0",
    "python-multipart>=0.0.20",
    "streamlink>=7.0.0",
    "uvicorn[standard]>=0.34.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
